<resources>
    <string name="app_name">IntentIdzam</string>
    <string name="move_activity">MASUK ACTIVITY</string>
    <string name="move_with_data">NAMA, PRODI DAN NIM</string>
    <string name="dial_number">PANGGIL TELEPON</string>
    <string name="move_with_result">PINDAH AKTIVITI UNTUK RESULT</string>
    <string name="result_from_activity">HASIL DARI AKTIVITI</string>
    <string name="choose_color">PILIH WARNA YANG KAMU SUKA :</string>
    <string name="_blue">BIRU</string>
    <string name="_yellow">KUNING</string>
    <string name="_red">MERAH</string>
    <string name="choose">PILIH</string>
    <string name="data_received">DATA DITERIMA</string>
    <string name="this_ismove_activity">ALHAMDULILLAH BISA</string>
    <string name="Idzam_Number">088228258622</string>
</resources>