<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".MainActivity"
    android:orientation="vertical">



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_activity"
        android:fontFamily="serif"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_below="@id/textView2"
        android:id="@+id/btn_move_activity" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_with_data"
        android:fontFamily="serif"
        android:layout_below="@id/btn_move_activity"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:id="@+id/btn_move_with_data" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SELAMAT DATANG"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="cursive"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50px"
        android:text="JANGAN LUPA BERSYUKUR"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:fontFamily="monospace"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/textView"
        android:id="@+id/textView2" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dial_number"
        android:fontFamily="serif"
        android:layout_below="@id/btn_move_with_data"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:id="@+id/btn_dial_number" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_with_result"
        android:fontFamily="serif"
        android:layout_below="@id/btn_dial_number"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:id="@+id/btn_move_for_result" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_from_activity"
        android:layout_below="@id/btn_move_for_result"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-black"
        android:id="@+id/tv_result"/>


</RelativeLayout>